@@ -17,33 +17,47 @@ colour 45 white 52   # 80-char column marker    white on very dark red
 
 view.column_markers.margin.format 45
 
+# Shared
+
+lang.shared.format.default white bold
+lang.shared.format.selection 32
+lang.shared.format.found yellow inverse
+lang.shared.tokens.reserved_words.format white
+lang.shared.tokens.constants.format 40
+lang.shared.tokens.comments.format 33
+lang.shared.tokens.non_alphanum.format white
+lang.shared.tokens.regular_expressions.format 36
+lang.shared.tokens.singlequoted_strings.format 37
+lang.shared.tokens.doublequoted_strings.format 38
+lang.shared.tokens.backquoted_strings.format 39
+
 # Diakonos help files
 
 lang.dhf.format.default white
 lang.dhf.format.selection inverse
-lang.dhf.format.found yellow inverse
+lang.dhf.format.found  = lang.shared.format.found
 lang.dhf.tokens.tags.format blue
 lang.dhf.tokens.title.format 33
 
 # Ruby
 
-lang.ruby.format.default white bold
-lang.ruby.format.selection 32
-lang.ruby.format.found yellow inverse
-lang.ruby.tokens.reserved_words.format white
-lang.ruby.tokens.constants.format 40
-lang.ruby.tokens.non_alphanum.format white
+lang.ruby.format.default = lang.shared.format.default
+lang.ruby.format.selection = lang.shared.format.selection
+lang.ruby.format.found = lang.shared.format.found
+lang.ruby.tokens.reserved_words.format = lang.shared.tokens.reserved_words.format
+lang.ruby.tokens.constants.format = lang.shared.tokens.constants.format
+lang.ruby.tokens.comments.format = lang.shared.tokens.comments.format
+lang.ruby.tokens.non_alphanum.format = lang.shared.tokens.non_alphanum.format
+lang.ruby.tokens.regular_expressions.format = lang.shared.tokens.regular_expressions.format
+lang.ruby.tokens.singlequoted_strings.format = lang.shared.tokens.singlequoted_strings.format
+lang.ruby.tokens.doublequoted_strings.format = lang.shared.tokens.doublequoted_strings.format
+lang.ruby.tokens.backquoted_strings.format = lang.shared.tokens.backquoted_strings.format
 lang.ruby.tokens.symbols.format 34
 lang.ruby.tokens.instance_variables.format 35
-lang.ruby.tokens.comments.format 33
-lang.ruby.tokens.regular_expressions.format 36
 lang.ruby.tokens.regular_expressions2.format 36
-lang.ruby.tokens.singlequoted_strings.format 37
-lang.ruby.tokens.doublequoted_strings.format 38
 lang.ruby.tokens.interpolated_string.format 38
 lang.interpolated_ruby.format.default 38
 lang.interpolated_ruby.tokens.interpolation.format 12 bold
-lang.ruby.tokens.backquoted_strings.format 39
 lang.ruby.tokens.interpolated_exec_string.format 39
 lang.interpolated_exec_ruby.format.default 39
 lang.interpolated_exec_ruby.tokens.interpolation.format 9 bold
@@ -53,54 +67,54 @@ lang.ruby.tokens.sql_string.format 1
 
 # Perl
 
-lang.perl.format.default white bold
-lang.perl.format.selection 32
-lang.perl.format.found yellow inverse
-lang.perl.tokens.comments.format 33
-lang.perl.tokens.constants.format 40
-lang.perl.tokens.non_alphanum.format white
-lang.perl.tokens.regular_expressions.format 36
-lang.perl.tokens.singlequoted_strings.format 37
-lang.perl.tokens.doublequoted_strings.format 38
-lang.perl.tokens.backquoted_strings.format 39
-lang.perl.tokens.reserved_words.format white
+lang.perl.format.default = lang.shared.format.default
+lang.perl.format.selection = lang.shared.format.selection
+lang.perl.format.found = lang.shared.format.found
+lang.perl.tokens.reserved_words.format = lang.shared.tokens.reserved_words.format
+lang.perl.tokens.constants.format = lang.shared.tokens.constants.format
+lang.perl.tokens.comments.format = lang.shared.tokens.comments.format
+lang.perl.tokens.non_alphanum.format = lang.shared.tokens.non_alphanum.format
+lang.perl.tokens.regular_expressions.format = lang.shared.tokens.regular_expressions.format
+lang.perl.tokens.singlequoted_strings.format = lang.shared.tokens.singlequoted_strings.format
+lang.perl.tokens.doublequoted_strings.format = lang.shared.tokens.doublequoted_strings.format
+lang.perl.tokens.backquoted_strings.format = lang.shared.tokens.backquoted_strings.format
 lang.perl.tokens.builtins.format cyan bold
 lang.perl.tokens.array_variables.format red bold
 lang.perl.tokens.hash_variables.format magenta bold
 
 # Java
 
-lang.java.format.default white bold
-lang.java.format.selection 32
-lang.java.format.found yellow inverse
+lang.java.format.default = lang.shared.format.default
+lang.java.format.selection = lang.shared.format.selection
+lang.java.format.found = lang.shared.format.found
 lang.java.tokens.singlequoted_strings.format 37
 lang.java.tokens.doublequoted_strings.format 38
 lang.java.tokens.reserved_words.format white
-lang.java.tokens.constants.format 40
-lang.java.tokens.comments.format 33
-lang.java.tokens.long_comments.format 33
-lang.java.tokens.non_alphanum.format white
-lang.java.tokens.regular_expressions.format 36
+lang.java.tokens.constants.format = lang.shared.tokens.constants.format
+lang.java.tokens.comments.format = lang.shared.tokens.comments.format
+lang.java.tokens.long_comments.format = lang.shared.tokens.comments.format
+lang.java.tokens.non_alphanum.format = lang.shared.tokens.non_alphanum.format
+lang.java.tokens.regular_expressions.format = lang.shared.tokens.regular_expressions.format
 
 # XML
 
 lang.xml.format.default white
-lang.xml.format.selection 32
-lang.xml.format.found yellow inverse
+lang.xml.format.selection = lang.shared.format.selection
+lang.xml.format.found = lang.shared.format.found
 lang.xml.tokens.entities.format magenta bold
 lang.xml.tokens.code.format white bold
-lang.xml.tokens.comments.format 33
+lang.xml.tokens.comments.format = lang.shared.tokens.comments.format
 lang.xml.tokens.template.format brown
 lang.xml_tag.format.default 41
 lang.xml_tag.format.selection 32
 lang.xml_tag.format.found yellow inverse
 lang.xml_tag.tokens.doublequoted_strings.format 38
 lang.xml_tag.tokens.singlequoted_strings.format 38
-lang.xml_tag.tokens.non_alphanum.format white
+lang.xml_tag.tokens.non_alphanum.format = lang.shared_tag.tokens.non_alphanum.format
 lang.xml_tag.tokens.namespaces.format 43
-lang.xml_comment.format.default 33
-lang.xml_comment.format.selection 32
-lang.xml_comment.format.found yellow inverse
+lang.xml_comment.format.default = lang.shared.tokens.comments.format
+lang.xml_comment.format.selection = lang.shared.format.selection
+lang.xml_comment.format.found = lang.shared.format.found
 lang.xml_tag.tokens.attributes ([a-zA-Z_-]+?)=
 lang.xml_tag.tokens.attributes.format 42
 
