@@ -460,6 +460,20 @@ key keycode319         operateOnLines
 # The filemask can also be used to specify specific filenames which
 # don't conform to the standard extensions for a language.
 
+# Inherited by several languages
+
+lang.shared.format.default white bold
+lang.shared.format.selection inverse
+lang.shared.format.found yellow inverse
+lang.shared.tokens.reserved_words.format white
+lang.shared.tokens.constants.format yellow bold
+lang.shared.tokens.comments.format 8 bold
+lang.shared.tokens.non_alphanum.format white
+lang.shared.tokens.regular_expressions.format red bold
+lang.shared.tokens.singlequoted_strings.format green bold
+lang.shared.tokens.doublequoted_strings.format green bold
+lang.shared.tokens.backquoted_strings.format red bold
+
 # Text (default)
 
 lang.text.format.default white
@@ -635,7 +649,7 @@ lang.css.tokens.colours #[A-Fa-f0-9]{6}|\b(?:aqua|black|blue|fuchsia|gray|green|
 lang.css.tokens.colours.format yellow bold
 lang.css.tokens.long_comments.open \/\*
 lang.css.tokens.long_comments.close \*\/
-lang.css.tokens.long_comments.format 8 bold
+lang.css.tokens.long_comments.format = lang.shared.tokens.comments.format
 lang.css.comment_string "/* "
 lang.css.comment_close_string " */"
 lang.css.tokens.numbers \b([0-9]+\.[0-9]+|[0-9]+)
@@ -652,25 +666,25 @@ lang.css.column_delimiters :|,
 
 lang.ruby.filemask (?:[Rr]akefile)|(?:\.(?:rb|gem(?:spec)?|rake)$)
 lang.ruby.bangmask #!.*ruby
-lang.ruby.format.default white bold
-lang.ruby.format.selection inverse
-lang.ruby.format.found yellow inverse
+lang.ruby.format.default = lang.shared.format.default
+lang.ruby.format.selection = lang.shared.format.selection
+lang.ruby.format.found = lang.shared.format.found
 lang.ruby.tokens.reserved_words \b(__FILE__|and|def|end|in|or|self|__LINE__|begin|defined\?|ensure|module|redo|super|until|BEGIN|break|do|false|next|rescue|then|when|END|case|else|for|nil|retry|true|while|alias|class|elsif|not|return|undef|yield)\b
-lang.ruby.tokens.reserved_words.format white
+lang.ruby.tokens.reserved_words.format = lang.shared.tokens.reserved_words.format
 lang.ruby.tokens.non_modifiers ^\s*(if|unless)
 lang.ruby.tokens.non_modifiers.format white
 lang.ruby.tokens.modifiers \s+(if|unless)
 lang.ruby.tokens.modifiers.format 44
 lang.ruby.tokens.constants \b([A-Z_]+|[A-Z_][A-Z0-9_]+)\b
-lang.ruby.tokens.constants.format yellow bold
+lang.ruby.tokens.constants.format = lang.shared.tokens.constants.format
 lang.ruby.tokens.symbols [^:](:[a-zA-Z_][a-zA-Z_0-9]*)
 lang.ruby.tokens.symbols.format white bold
 lang.ruby.tokens.comments (#.*)
-lang.ruby.tokens.comments.format 8 bold
+lang.ruby.tokens.comments.format = lang.shared.tokens.comments.format
 lang.ruby.comment_string "# "
 lang.ruby.tokens.long_comments.open ^=begin
 lang.ruby.tokens.long_comments.close ^=end
-lang.ruby.tokens.long_comments.format 8 bold
+lang.ruby.tokens.long_comments.format = lang.shared.tokens.comments.format
 lang.ruby.tokens.sql_string.open (<<-EOSQL)
 lang.ruby.tokens.sql_string.close (EOSQL)
 lang.ruby.tokens.sql_string.format 1
@@ -737,11 +751,11 @@ lang.php.tokens.reserved_words.format white
 lang.php.tokens.constants \b([A-Z_]+|[A-Z_][A-Z0-9_]+)\b
 lang.php.tokens.constants.format yellow bold
 lang.php.tokens.comments (\/\/.*)
-lang.php.tokens.comments.format 8 bold
+lang.php.tokens.comments.format = lang.shared.tokens.comments.format
 lang.php.comment_string "// "
 lang.php.tokens.long_comments.open \/\*
 lang.php.tokens.long_comments.close \*\/
-lang.php.tokens.long_comments.format 8 bold
+lang.php.tokens.long_comments.format = lang.shared.tokens.comments.format
 lang.php.tokens.preprocessor (^\s*#.*)
 lang.php.tokens.preprocessor.format yellow bold
 lang.php.tokens.sql_string.open (<<<EOS)
@@ -772,7 +786,7 @@ lang.perl.format.default white bold
 lang.perl.format.selection inverse
 lang.perl.format.found yellow inverse
 lang.perl.tokens.comments (#.*)
-lang.perl.tokens.comments.format 8 bold
+lang.perl.tokens.comments.format = lang.shared.tokens.comments.format
 lang.perl.comment_string "# "
 lang.perl.tokens.constants \b([A-Z_]+|[A-Z_][A-Z0-9_]+)\b
 lang.perl.tokens.constants.format yellow bold
@@ -817,7 +831,7 @@ lang.python.format.found yellow inverse
 lang.python.tokens.constants \b([A-Z_]+|[A-Z_][A-Z0-9_]+)\b
 lang.python.tokens.constants.format yellow bold
 lang.python.tokens.comments (#.*)
-lang.python.tokens.comments.format 8 bold
+lang.python.tokens.comments.format = lang.shared.tokens.comments.format
 lang.python.comment_string "# "
 lang.python.tokens.doublequoted_strings (\".*?[^\\]\")
 lang.python.tokens.doublequoted_strings.format green bold
@@ -854,11 +868,11 @@ lang.java.tokens.reserved_words.format white
 lang.java.tokens.constants \b([A-Z_]+|[A-Z_][A-Z0-9_]+)\b
 lang.java.tokens.constants.format yellow bold
 lang.java.tokens.comments (\/\/.*)
-lang.java.tokens.comments.format 8 bold
+lang.java.tokens.comments.format = lang.shared.tokens.comments.format
 lang.java.comment_string "// "
 lang.java.tokens.long_comments.open \/\*
 lang.java.tokens.long_comments.close \*\/
-lang.java.tokens.long_comments.format 8 bold
+lang.java.tokens.long_comments.format = lang.shared.tokens.comments.format
 lang.java.tokens.regular_expressions (\/.+?[^\\]\/)
 lang.java.tokens.regular_expressions.format red bold
 lang.java.tokens.non_alphanum ([!@#$%\^&*()\[\]{}/?=+\-\\|,<.>;:])
@@ -892,13 +906,13 @@ lang.c.tokens.reserved_words.format white
 lang.c.tokens.constants \b([A-Z_]+|[A-Z_][A-Z0-9_]+)\b
 lang.c.tokens.constants.format yellow bold
 lang.c.tokens.comments (\/\/.*)
-lang.c.tokens.comments.format 8 bold
+lang.c.tokens.comments.format = lang.shared.tokens.comments.format
 lang.c.comment_string "// "
 lang.c.tokens.preprocessor (^\s*#.*)
 lang.c.tokens.preprocessor.format yellow bold
 lang.c.tokens.long_comments.open \/\*
 lang.c.tokens.long_comments.close \*\/
-lang.c.tokens.long_comments.format 8 bold
+lang.c.tokens.long_comments.format = lang.shared.tokens.comments.format
 lang.c.tokens.non_alphanum ([!@#$%\^&*()\[\]{}/?=+\-\\|,<.>;:])
 lang.c.tokens.non_alphanum.format white
 lang.c.indent.size 4
@@ -979,7 +993,7 @@ lang.sql.tokens.commands.format cyan
 lang.sql.tokens.data_types.case_insensitive \b(BIT|BOOLEAN|CHAR|CHARACTER|DATE|DEC|DECIMAL|DOUBLE|FLOAT|INT|INTEGER|INTERVAL|LONG|NCHAR|NUMBER|NUMERIC|REAL|RECORD|ROW|SMALLINT|STRUCTURE|TIME|TIMESTAMP|TUPLE|VARCHAR|VARCHAR2)\b
 lang.sql.tokens.data_types.format brown
 lang.sql.tokens.comments (--.*)
-lang.sql.tokens.comments.format 8 bold
+lang.sql.tokens.comments.format = lang.shared.tokens.comments.format
 lang.sql.comment_string "-- "
 lang.sql.tokens.singlequoted_strings ('.*?[^\\]')
 lang.sql.tokens.singlequoted_strings.format green bold
@@ -1005,7 +1019,7 @@ lang.bash.indent.roundup true
 #lang.bash.indent.using_tabs true
 lang.bash.tabsize 4
 lang.bash.tokens.comments (^\s*#.*)
-lang.bash.tokens.comments.format 8 bold
+lang.bash.tokens.comments.format = lang.shared.tokens.comments.format
 lang.bash.comment_string "# "
 lang.bash.tokens.singlequoted_strings ('.*?[^\\]')
 lang.bash.tokens.singlequoted_strings.format green bold
@@ -1031,7 +1045,7 @@ lang.tcl.indent.roundup true
 #lang.tcl.indent.using_tabs true
 lang.tcl.tabsize 4
 lang.tcl.tokens.comments (^\s*#.*)
-lang.tcl.tokens.comments.format 8 bold
+lang.tcl.tokens.comments.format = lang.shared.tokens.comments.format
 lang.tcl.comment_string "# "
 lang.tcl.tokens.reserved_words \b(encoding|incr|pid|tcl_endOfWord|Tcl|eof|info|tcl_findLibrary|after|error|interp|pkg_mkIndex|tcl_startOfNextWord|append|eval|join|proc|tcl_startOfPreviousWord|array|exec|lappend|puts|tcl_wordBreakAfter|auto_execok|exit|lassign|pwd|tcl_wordBreakBefore|auto_import|expr|lindex|re_syntax|tcltest|auto_load|fblocked|linsert|read|tclvars|auto_mkindex|fconfigure|list|regexp|tell|auto_mkindex_old|fcopy|llength|registry|time|auto_qualify|file|load|regsub|trace|auto_reset|fileevent|lrange|rename|unknown|bgerror|filename|lrepeat|resource|unload|binary|flush|lreplace|return|unset|break|for|lsearch|scan|update|catch|foreach|lset|seek|uplevel|cd|format|lsort|set|upvar|clock|gets|memory|socket|variable|close|glob|msgcat|source|vwait|concat|global|namespace|split|while|continue|history|open|string|dde|http|package|subst|dict|if|parray|switch)\b
 lang.tcl.tokens.reserved_words.format white
@@ -1104,7 +1118,7 @@ lang.yaml.tokens.document_terminator.format 10
 lang.yaml.tokens.directive_indicator ^(%.*)
 lang.yaml.tokens.directive_indicator.format 10
 lang.yaml.tokens.comment_indicator (#.+)
-lang.yaml.tokens.comment_indicator.format 8 bold
+lang.yaml.tokens.comment_indicator.format = lang.shared.tokens.comments.format
 lang.yaml.comment_string "# "
 lang.yaml.tokens.anchor_indicator (&\w+)
 lang.yaml.tokens.anchor_indicator.format red bold
@@ -1147,7 +1161,7 @@ lang.haml.tokens.id.format cyan
 lang.haml.tokens.xml !!!
 lang.haml.tokens.xml.format magenta bold
 lang.haml.tokens.html_comment ^ *(\/.*)
-lang.haml.tokens.html_comment.format 8 bold
+lang.haml.tokens.html_comment.format = lang.shared.tokens.comments.format
 lang.haml.tokens.line_joiner \|$
 lang.haml.tokens.line_joiner.format 12 bold
 
@@ -1169,9 +1183,9 @@ lang.sass.tokens.colour.format yellow bold
 lang.sass.tokens.units \d+ *(px|em|pt)\b
 lang.sass.tokens.units.format brown
 lang.sass.tokens.silent_comments (\/\/.*)
-lang.sass.tokens.silent_comments.format 8 bold
+lang.sass.tokens.silent_comments.format = lang.shared.tokens.comments.format
 lang.sass.tokens.loud_comments (\/\*.*)
-lang.sass.tokens.loud_comments.format 8 bold
+lang.sass.tokens.loud_comments.format = lang.shared.tokens.comments.format
 lang.sass.tokens.line_joiner \|$
 lang.sass.tokens.line_joiner.format 12 bold
 lang.sass.tokens.parent (&):
@@ -1184,7 +1198,7 @@ lang.makefile.format.found yellow inverse
 lang.makefile.tokens.assignment_lhs ^\s*([^\s=]+)\s*[+?]?=
 lang.makefile.tokens.assignment_lhs.format white bold
 lang.makefile.tokens.comments (^\s*#.*)
-lang.makefile.tokens.comments.format 8 bold
+lang.makefile.tokens.comments.format = lang.shared.tokens.comments.format
 lang.makefile.comment_string "# "
 lang.makefile.tokens.targets (^\S+):
 lang.makefile.tokens.targets.format yellow bold
@@ -1206,7 +1220,7 @@ lang.bind.format.default white bold
 lang.bind.format.selection inverse
 lang.bind.format.found yellow inverse
 lang.bind.tokens.comments (;.*)
-lang.bind.tokens.comments.format 8 bold
+lang.bind.tokens.comments.format = lang.shared.tokens.comments.format
 lang.bind.comment_string "; "
 lang.bind.tokens.ttl \$TTL
 lang.bind.tokens.ttl.format yellow bold
