@@ -66,7 +66,7 @@ require 'diakonos/vendor/fuzzy_file_finder'
 module Diakonos
 
   VERSION       = '0.8.8'
-  LAST_MODIFIED = 'March 4, 2009'
+  LAST_MODIFIED = 'March 5, 2009'
 
   DONT_ADJUST_ROW       = false
   ADJUST_ROW            = true
